--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A sample repository to demonstrate the integration with Azure DevOps (especially Azure Pipelines)",
   "main": "index.js",
   "scripts": {
-    "test": "ava -v"
+    "test": "ava -v",
+    "build": "npm test"
   },
   "repository": {
     "type": "git",
